adx-kusto-dataframe

--- a/bulk-insert.ipynb
+++ b/bulk-insert.ipynb
@@ -447,8 +447,8 @@
    "execution_count": 21,
    "source": [
     "from azure.storage.blob import BlobServiceClient, BlobClient, ContainerClient\n",
-    "blob_service_client = BlobServiceClient.from_connection_string(connect_str)\n",
     "\n",
+    "blob_service_client = BlobServiceClient.from_connection_string(connect_str)\n",
     "container_name = \"bulk-insert\"\n",
     "container_client = blob_service_client.create_container(container_name)"
    ],
@@ -460,9 +460,9 @@
    "execution_count": 82,
    "source": [
     "local_path = \"./data\"\n",
-    "#csv_file_name = \"train_10000.csv\"\n",
-    "#csv_file_name = \"train_1000000.csv\"\n",
-    "csv_file_name = \"train.csv\"\n",
+    "csv_file_name = \"train_10000.csv\"\n",
+    "# csv_file_name = \"train_1000000.csv\"\n",
+    "# csv_file_name = \"train.csv\"\n",
     "upload_file_path = os.path.join(local_path, csv_file_name)\n"
    ],
    "outputs": [],
@@ -792,26 +792,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "source": [
-    "# fetch dataset from ADX\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "UsageError: Line magic function `%%timeit` not found.\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# convert to data frame or native test"
+    "# fetch dataset from ADX\n",
+    "# pip install azure-kusto-data\n",
+    "\n",
+    "from azure.kusto.data import KustoClient, KustoConnectionStringBuilder\n",
+    "from azure.kusto.data.exceptions import KustoServiceError\n",
+    "from azure.kusto.data.helpers import dataframe_from_result_table\n",
+    "import pandas as pd\n",
+    "\n",
+    "AAD_TENANT_ID = \"<TenantId>\"\n",
+    "KUSTO_CLUSTER = \"https://help.kusto.windows.net/\"\n",
+    "KUSTO_DATABASE = \"Samples\""
    ],
    "outputs": [],
    "metadata": {}
@@ -820,7 +813,41 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# dataframe to CSV"
+    "KCSB = KustoConnectionStringBuilder.with_aad_device_authentication(KUSTO_CLUSTER)\n",
+    "KCSB.authority_id = AAD_TENANT_ID"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "KUSTO_CLIENT = KustoClient(KCSB)\n",
+    "KUSTO_QUERY = \"StormEvents | sort by StartTime desc | take 10\"\n",
+    "\n",
+    "RESPONSE = KUSTO_CLIENT.execute(KUSTO_DATABASE, KUSTO_QUERY)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# convert to data frame or native test\n",
+    "df = dataframe_from_result_table(RESPONSE.primary_results[0])\n",
+    "df"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# dataframe to CSV\n",
+    "df.to_csv(r'Path where you want to store the exported CSV file\\File Name.csv', index = False)"
    ],
    "outputs": [],
    "metadata": {}
